# msc_thesis

./: .gitignore  README.md  figure.mplstyle  pyproject.toml  requirements.txt
arithmetic_lm/: callbacks.py  config_test.py  constants.py  eval.py  eval_scratchpad.py  eval_utils.py  format.py  formatting.py  greedy_vs_beam.py  logger.py  tokenizer.py  train.py  train_utils.py  utils.py
config/: README.md
docs/: experiments.md  haaiss_2024.md  hypotheses_and_experiments.md
latex/: 1_introduction.tex  1introduction.tex  2_background.tex  2basics.tex  3_related_work.tex  3_sota.tex  4_approach.tex  4_research_questions.tex  5_conclusion.tex  5conclusions.tex  README.md  appA.tex  appB.tex  appendix_a.tex  appendix_b.tex  main.tex  pres.tex  references.bib  thesis.bbl-SAVE-ERROR  thesis.bib  thesis.blg  thesis.fdb_latexmk  thesis.fls  thesis.lof  thesis.lot  thesis.tex
notebooks/: addition.ipynb  approach_plots.ipynb  chain_of_thought.ipynb  data_playground.ipynb  digit_loss_investigation.ipynb  download_exp27.ipynb  exp12_attn_map.ipynb  exp13_attn_map.ipynb  exp8_attention_map.ipynb  exp8_linear_probe.ipynb  force_output.ipynb  greedy_vs_beam.py  interp_scratch.ipynb  logit_entropy.ipynb  logit_lens.ipynb  logitlens.ipynb  mistake_analysis.ipynb  pause_tokens.ipynb  plot_exp27.ipynb  qwen2-1.5b-test.ipynb  relative_attention.ipynb  str_algo_error_analysis.ipynb  token_entropy.ipynb  training_digit_distribution.ipynb  ut_inference_time_steps.ipynb  visualize_attn_maps.ipynb
plots/: README.md
scripts/: convert_drawio_to_pdf.sh  download_model.py  run_experiments.sh
(+399 files in other folders)
