[tool.poetry]
name = "arithmetic_lm"
version = "0.1.0"
description = "MSc Thesis"
authors = ["Imran Ibrahimli <imran.ibrahimli@studium.uni-hamburg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
torch = "^2.2.0"
lightning = "^2.2.0.post0"
wandb = "^0.16.3"
loguru = "^0.7.2"
tiktoken = "^0.6.0"
omegaconf = "^2.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
mypy = "^1.8.0"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-include = ["*.ipynb"]